artifacts/perf/frankentorch-2rsa6/pass2_kernel_proof_group_norm_saved_stats.log
   Compiling ft-kernel-cpu v0.1.0 (/data/projects/frankentorch/crates/ft-kernel-cpu)
error[E0428]: the name `batch_norm_f64_spatial1_row_parallel_matches_serial_reference_bits` is defined multiple times
     --> crates/ft-kernel-cpu/src/lib.rs:35073:5
      |
34969 |     fn batch_norm_f64_spatial1_row_parallel_matches_serial_reference_bits() {
      |     ----------------------------------------------------------------------- previous definition of the value `batch_norm_f64_spatial1_row_parallel_matches_serial_reference_bits` here
...
35073 |     fn batch_norm_f64_spatial1_row_parallel_matches_serial_reference_bits() {
      |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `batch_norm_f64_spatial1_row_parallel_matches_serial_reference_bits` redefined here
      |
      = note: `batch_norm_f64_spatial1_row_parallel_matches_serial_reference_bits` must be defined only once in the value namespace of this module

For more information about this error, try `rustc --explain E0428`.
error: could not compile `ft-kernel-cpu` (lib test) due to 1 previous error
